k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gbox-fe
  labels:
    purpose: frontend-express-ssr
    cluster: machine2
